
[package]
name = "stdto"
version = "0.3.0"
edition = "2021"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
categories = ["development-tools", "rust-patterns", "encoding", "parsing-tools"]
keywords = ["serde", "bytes", "hash", "json", "encoding", "decoding"]
description = "Stdto provides a set of functional traits for conversion between various data representations."
homepage = "https://github.com/just-do-halee/stdto"
repository = "https://github.com/just-do-halee/stdto"
license = "MIT OR Apache-2.0"
readme = "README.md"

exclude = ["RELEASE.md", "release.toml", ".gitignore", ".github/", "crates/"]

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "Stdto provides a set of functional traits for conversion between various data representations."
categories = ["development-tools", "rust-patterns", "encoding", "parsing-tools"]
keywords = ["serde", "bytes", "hash", "json", "encoding", "decoding"]
homepage = "https://github.com/just-do-halee/stdto"
repository = "https://github.com/just-do-halee/stdto"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
stdto_core = { version = "0.3", path = "crates/stdto_core" }
stdto_derive = { version = "0.3", path = "crates/stdto_derive" }

[dev-dependencies]
sha2 = "0.10"

[features]
default = ["derive", "serde", "bytes", "hash", "json", "hex"]
derive = []
serde = []
bytes = ["serde"]
hash = ["bytes"]
json = []
hex = []
