
[package]
name = "stdto"
version = "0.13.0"
edition = "2021"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
categories = ["development-tools", "rust-patterns", "encoding"]
keywords = ["serde", "bytes", "hash", "json", "hex"]
description = "Stdto provides a set of functional traits for conversion between various data representations."
homepage = "https://github.com/just-do-halee/stdto"
repository = "https://github.com/just-do-halee/stdto"
license = "MIT OR Apache-2.0"
readme = "README.md"

exclude = ["RELEASE.md", "release.toml", ".gitignore", ".github/", "crates/"]

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "Stdto provides a set of functional traits for conversion between various data representations."
categories = ["development-tools", "rust-patterns", "encoding"]
keywords = ["serde", "bytes", "hash", "json", "hex"]
homepage = "https://github.com/just-do-halee/stdto"
repository = "https://github.com/just-do-halee/stdto"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
stdto_core = { version = "0.14", path = "crates/stdto_core", default-features = false }
stdto_derive = { version = "0.14", path = "crates/stdto_derive", optional = true }

[dev-dependencies]
sha2 = "0.10"

[features]
default = [
    "derive",
    "serde",
    "bytes",
    "hash",
    "json",
    "yaml",
    "toml",
    "file",
    "hex",
]

derive = ["dep:stdto_derive"]

serde = ["stdto_core/serde"]

bytes = ["serde", "stdto_core/bytes"]
hash = ["bytes", "stdto_core/hash"]

json = ["serde", "stdto_core/json"]
yaml = ["serde", "stdto_core/yaml"]
toml = ["serde", "stdto_core/toml"]
file = ["json", "yaml", "toml"]

hex = ["stdto_core/hex"]
