[package]
name = "stdto_core"
version = "0.2.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
digest = "0.10"
serde_json = "1.0"

[dev-dependencies]
sha2 = "0.10"
