[package]
name = "stdto_core"
version = "0.8.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["serde", "bytes", "hash", "json", "hex"]

serde = ["dep:serde", "serde?/derive"]

bytes = ["serde", "dep:bincode"]
hex = ["bytes"]
hash = ["bytes", "dep:digest"]
json = ["serde", "dep:serde_json"]

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
digest = { version = "0.10", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
sha2 = "0.10"
