[package]
name = "stdto_core"
version = "0.12.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["serde", "bytes", "hash", "json", "yaml", "toml", "file", "hex"]

serde = ["dep:serde", "serde?/derive"]

bytes = ["serde", "dep:bincode"]
hash = ["bytes", "dep:digest"]

json = ["serde", "dep:serde_json"]
yaml = ["serde", "dep:serde_yaml"]
toml = ["serde", "dep:toml"]
file = ["json", "yaml", "toml"]

hex = []

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
digest = { version = "0.10", optional = true }

serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true }

[dev-dependencies]
sha2 = "0.10"
