[package]
name = "stdto_derive"
version = "0.1.0"
description = "Director is a simple, versatile, ergonomic state machine in Rust-lang."
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

