[package]
name = "stdto_derive"
version = "0.10.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
paste = "1.0"
